--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/video.min.css" />
     <link rel="stylesheet" href="assets/css/it-source-2.css" />
   </head>
-
+  <!-- <head></head> -->
   <body
     class="it-nw"
     data-spy="scroll"
