--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
       class="it-nw-banner-section position-relative"
       data-background="images/bg-01.jpg"
     >
+      <div id="particles-js"></div>
       <div class="it-nw-banner-content">
         <div class="container">
           <div class="it-nw-banner-item position-relative">
@@ -1939,6 +1940,7 @@
     <script src="assets/js/jquery.counterup.min.js"></script>
     <script src="assets/js/waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.1/typed.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.js"></script>
     <script src="assets/js/it-source-2.js"></script>
