--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     align-items-center
                   "
                 >
-                  <i class="flaticon-idea"></i>
+                  <i class="flaticon-data-processing"></i>
                 </div>
                 <div class="it-nw-feature-inner-text headline pera-content">
                   <h3>Data Science</h3>
@@ -499,7 +499,7 @@
                     align-items-center
                   "
                 >
-                  <i class="flaticon-idea"></i>
+                  <i class="flaticon-design-thinking"></i>
                 </div>
                 <div class="it-nw-feature-inner-text headline pera-content">
                   <h3>Data Psychology</h3>
@@ -529,7 +529,7 @@
                     align-items-center
                   "
                 >
-                  <i class="flaticon-data-analysis"></i>
+                  <i class="flaticon-employee"></i>
                 </div>
                 <div class="it-nw-feature-inner-text headline pera-content">
                   <h3>Business Intelligence & Analytics</h3>
@@ -559,7 +559,7 @@
                     align-items-center
                   "
                 >
-                  <i class="flaticon-profit"></i>
+                  <i class="flaticon-software-development"></i>
                 </div>
                 <div class="it-nw-feature-inner-text headline pera-content">
                   <h3>Software Development</h3>
