--- a/index.html
+++ b/index.html
@@ -274,6 +274,11 @@
                         >Our Vision</a
                       >
                     </li>
+                    <li class="nav-item">
+                      <a href="#it-nw-team" class="nav-link text-capitalize"
+                        >Leadership</a
+                      >
+                    </li>
                   </ul>
                 </div>
                 <div class="it-nw-about-tab-content ul-li-block pera-content">
@@ -592,17 +597,49 @@
       </div>
       <div class="container">
         <div class="it-nw-service-upper-wrapper">
+          <div
+            class="
+              it-nw-section-title
+              headline
+              pera-content
+              text-center
+              middle-align
+              wow
+              fadeInUp
+              mb-5
+            "
+            data-wow-delay="0ms"
+            data-wow-duration="1500ms"
+          >
+            <span class="it-nw-title-tag">Our Partners</span>
+          </div>
           <div class="row d-flex align-items-center">
-            <div class="col-3 partner-img">
+            <div
+              class="col-3 partner-img wow fadeInRight animated"
+              data-wow-delay="0ms"
+              data-wow-duration="1700ms"
+            >
               <img src="images/dl.png" alt="" />
             </div>
-            <div class="col-3 partner-img">
+            <div
+              class="col-3 partner-img wow fadeInRight animated"
+              data-wow-delay="0ms"
+              data-wow-duration="1200ms"
+            >
               <img src="images/ms.png" alt="" />
             </div>
-            <div class="col-3 partner-img">
+            <div
+              class="col-3 partner-img wow fadeInLeft animated"
+              data-wow-delay="0ms"
+              data-wow-duration="1200ms"
+            >
               <img src="images/tb.svg" alt="" />
             </div>
-            <div class="col-3 partner-img">
+            <div
+              class="col-3 partner-img wow fadeInLeft animated"
+              data-wow-delay="0ms"
+              data-wow-duration="1700ms"
+            >
               <img src="images/sf.png" alt="" />
             </div>
           </div>
@@ -610,60 +647,6 @@
       </div>
     </section>
     <!-- End of Service section
-	============================================= -->
-
-    <!-- Start of CTA section
-	============================================= -->
-    <section
-      id="it-nw-cta"
-      class="it-nw-cta-section"
-      data-background="images/ct-bg.jpg"
-    >
-      <div class="container">
-        <div class="it-nw-cta-content d-flex justify-content-between">
-          <div
-            class="it-nw-cta-text headline wow fadeInLeft"
-            data-wow-delay="0ms"
-            data-wow-duration="1500ms"
-          >
-            <h2>Sharing Expertise. Building Relationships.</h2>
-          </div>
-          <div
-            class="
-              it-nw-cta-info-btn
-              d-flex
-              align-items-center
-              position-relative
-              wow
-              fadeInRight
-            "
-            data-wow-delay="0ms"
-            data-wow-duration="1500ms"
-          >
-            <span class="it-nw-cta-arrow position-absolute"
-              ><img src="assets/img/its-2/logo/arrow2.png" alt=""
-            /></span>
-            <div class="it-nw-cta-info d-flex align-items-center">
-              <div class="it-nw-cta-icon">
-                <i class="fas fa-phone"></i>
-              </div>
-              <div class="it-nw-cta-text headline">
-                <span>Contact Us</span>
-                <h3>+091 547 458 458</h3>
-              </div>
-            </div>
-            <div class="it-nw-btn text-center">
-              <a
-                class="d-flex justify-content-center align-items-center"
-                href="#"
-                >Learn More <i class="fas fa-arrow-right"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End of CTA section
 	============================================= -->
 
     <!-- Start of Project section
@@ -693,6 +676,7 @@
 
       <div class="it-nw-project-content" style="background: #010717">
         <div class="content-width">
+          <div id="particles-test"></div>
           <div class="slideshow">
             <!-- Slideshow Items -->
             <div class="slideshow-items">
@@ -1544,6 +1528,59 @@
     <!-- End of FAQ section
 	============================================= -->
 
+    <!-- Start of CTA section
+	============================================= -->
+    <section
+      id="it-nw-cta"
+      class="it-nw-cta-section mt-5"
+      data-background="images/ct-bg.jpg"
+    >
+      <div class="container">
+        <div class="it-nw-cta-content d-flex justify-content-between">
+          <div
+            class="it-nw-cta-text headline wow fadeInLeft"
+            data-wow-delay="0ms"
+            data-wow-duration="1500ms"
+          >
+            <h2>Sharing Expertise. Building Relationships.</h2>
+          </div>
+          <div
+            class="
+              it-nw-cta-info-btn
+              d-flex
+              align-items-center
+              position-relative
+              wow
+              fadeInRight
+            "
+            data-wow-delay="0ms"
+            data-wow-duration="1500ms"
+          >
+            <span class="it-nw-cta-arrow position-absolute"
+              ><img src="assets/img/its-2/logo/arrow2.png" alt=""
+            /></span>
+            <div class="it-nw-cta-info d-flex align-items-center">
+              <div class="it-nw-cta-icon">
+                <i class="fas fa-phone"></i>
+              </div>
+              <div class="it-nw-cta-text headline">
+                <span>Contact Us</span>
+                <h3>+091 547 458 458</h3>
+              </div>
+            </div>
+            <div class="it-nw-btn text-center">
+              <a
+                class="d-flex justify-content-center align-items-center"
+                href="#"
+                >Learn More <i class="fas fa-arrow-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of CTA section
+	============================================= -->
     <!-- Start of Blog section
 	============================================= -->
     <section id="it-nw-blog" class="it-nw-blog-section position-relative">
@@ -1560,7 +1597,7 @@
           "
         >
           <div class="it-nw-section-title headline pera-content">
-            <span class="it-nw-title-tag">Blog </span>
+            <span class="it-nw-title-tag">Latest Trends </span>
             <h2>Check Out Our Latest News</h2>
             <p>
               incididunt ut labore et dolore magna aliqua. Quis ipsum
@@ -1569,8 +1606,10 @@
             </p>
           </div>
           <div class="it-nw-btn text-center">
-            <a class="d-flex justify-content-center align-items-center" href="#"
-              >More Blogs<i class="fas fa-arrow-right"></i
+            <a
+              class="d-flex justify-content-center align-items-center pl-3"
+              href="#"
+              >View All<i class="fas fa-arrow-right"></i
             ></a>
           </div>
         </div>
