--- a/index.html
+++ b/index.html
@@ -626,14 +626,14 @@
               data-wow-delay="0ms"
               data-wow-duration="1200ms"
             >
-              <img src="images/ms.png" alt="" />
+              <img src="images/mp.jpg" alt="" />
             </div>
             <div
               class="col-3 partner-img wow fadeInLeft animated"
               data-wow-delay="0ms"
               data-wow-duration="1200ms"
             >
-              <img src="images/tb.svg" alt="" />
+              <img src="images/skyvia.png" alt="" />
             </div>
             <div
               class="col-3 partner-img wow fadeInLeft animated"
