--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <a class="nav-link" href="#it-nw-project">Success Stories</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#it-nw-blog">News</a>
+                <a class="nav-link" href="#it-nw-why-choose">Why Us</a>
               </li>
             </ul>
             <div class="it-nw-btn navbutton text-center">
@@ -455,7 +455,7 @@
               <div class="it-nw-feature-content">
                 <div class="row justify-content-center">
                   <a
-                    href="/data-psychology.html"
+                    href="/data-science.html"
                     class="col-lg-4 col-md-6 wow fadeInUp"
                     data-wow-delay="0ms"
                     data-wow-duration="1500ms"
@@ -482,7 +482,8 @@
                       </div>
                     </div>
                   </a>
-                  <div
+                  <a
+                    href="data-engineering.html"
                     class="col-lg-4 col-md-6 wow fadeInUp"
                     data-wow-delay="200ms"
                     data-wow-duration="1500ms"
@@ -509,8 +510,9 @@
                         </p>
                       </div>
                     </div>
-                  </div>
-                  <div
+                  </a>
+                  <a
+                    href="data-visualization.html"
                     class="col-lg-4 col-md-6 wow fadeInUp"
                     data-wow-delay="400ms"
                     data-wow-duration="1500ms"
@@ -537,12 +539,13 @@
                         </p>
                       </div>
                     </div>
-                  </div>
+                  </a>
                 </div>
               </div>
               <div class="it-nw-feature-content">
                 <div class="row justify-content-center">
-                  <div
+                  <a
+                    href="data-psychology.html"
                     class="col-lg-4 col-md-6 wow fadeInUp"
                     data-wow-delay="0ms"
                     data-wow-duration="1500ms"
@@ -568,8 +571,9 @@
                         </p>
                       </div>
                     </div>
-                  </div>
-                  <div
+                  </a>
+                  <a
+                    href="bi-analytics.html"
                     class="col-lg-4 col-md-6 wow fadeInUp"
                     data-wow-delay="200ms"
                     data-wow-duration="1500ms"
@@ -595,8 +599,9 @@
                         </p>
                       </div>
                     </div>
-                  </div>
-                  <div
+                  </a>
+                  <a
+                    href="software-development.html"
                     class="col-lg-4 col-md-6 wow fadeInUp"
                     data-wow-delay="400ms"
                     data-wow-duration="1500ms"
@@ -623,7 +628,7 @@
                         </p>
                       </div>
                     </div>
-                  </div>
+                  </a>
                 </div>
               </div>
             </div>
@@ -659,34 +664,42 @@
                   </p>
                 </div>
                 <div class="row d-flex align-items-center mt-5">
-                  <div
+                  <a
+                    href="partners.html"
+                    target="_blank"
                     class="col-3 partner-img wow fadeInRight animated mt-5"
                     data-wow-delay="0ms"
                     data-wow-duration="1700ms"
                   >
                     <img src="images/dl.png" alt="" />
-                  </div>
-                  <div
+                  </a>
+                  <a
+                    href="partners.html"
+                    target="_blank"
                     class="col-3 partner-img wow fadeInRight animated"
                     data-wow-delay="0ms"
                     data-wow-duration="1200ms"
                   >
                     <img src="images/mp.jpg" alt="" />
-                  </div>
-                  <div
+                  </a>
+                  <a
+                    href="partners.html"
+                    target="_blank"
                     class="col-3 partner-img wow fadeInLeft animated"
                     data-wow-delay="0ms"
                     data-wow-duration="1200ms"
                   >
                     <img src="images/skyvia.png" alt="" />
-                  </div>
-                  <div
+                  </a>
+                  <a
+                    href="partners.html"
+                    target="_blank"
                     class="col-3 partner-img wow fadeInLeft animated"
                     data-wow-delay="0ms"
                     data-wow-duration="1700ms"
                   >
                     <img src="images/sf.png" alt="" />
-                  </div>
+                  </a>
                 </div>
               </div>
             </div>
