--- a/news.html
+++ b/news.html
@@ -65,7 +65,7 @@
     </div>
     <div
       class="sample-header"
-      style="background-image: url('../../images/rr.jpg')"
+      style="background-image: url('https://picsum.photos/1280/600')"
     >
       <div class="sample-header-section text-center">
         <h1 class="display-3">News</h1>
