--- a/case-studies.html
+++ b/case-studies.html
@@ -63,7 +63,7 @@
     </div>
     <div
       class="sample-header"
-      style="background-image: url('../../images/bg-1.jpg')"
+      style="background-image: url('https://picsum.photos/1280/600')"
     >
       <div class="sample-header-section text-center">
         <h1 class="display-3">Success Stories</h1>
@@ -94,6 +94,32 @@
                 <option value="2">Finance</option>
                 <option value="3">Telecom and Media</option>
                 <option value="3">Education</option>
+              </select>
+              <p class="selecionado_opcion" onclick="open_select(this)"></p>
+              <span onclick="open_select(this)" class="icon_select_mate"
+                ><svg
+                  fill="#000000"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  width="24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z" />
+                  <path d="M0-.75h24v24H0z" fill="none" /></svg
+              ></span>
+              <div class="cont_list_select_mate">
+                <ul class="cont_select_int"></ul>
+              </div>
+            </div>
+            <div class="select_mate ml-4" data-mate-select="active">
+              <select name="" onchange="" onclick="return false;" id="">
+                <option value="">Select Service</option>
+                <option value="1">Data Science</option>
+                <option value="2">Data Psychology</option>
+                <option value="3">Data Engineering</option>
+                <option value="3">Data Visualization</option>
+                <option value="3">BI and Anlaytics</option>
+                <option value="3">Software Development</option>
               </select>
               <p class="selecionado_opcion" onclick="open_select(this)"></p>
               <span onclick="open_select(this)" class="icon_select_mate"
