--- a/data-psychology.html
+++ b/data-psychology.html
@@ -65,7 +65,7 @@
     </div>
     <div
       class="sample-header"
-      style="background-image: url('../../images/rr.jpg')"
+      style="background-image: url('../../images/b3.jpg')"
     >
       <div class="sample-header-section text-center">
         <h1 class="display-3">Data Psychology</h1>
