--- a/data-visualization.html
+++ b/data-visualization.html
@@ -170,132 +170,157 @@
       </div>
     </div>
 
-    <footer
-      id="it-nw-fooer"
-      class="it-nw-footer-section position-relative"
-      data-background="images/f-bg.jpg"
-    >
-      <div class="it-nw-newslatter-area">
-        <div class="container">
-          <div
-            class="it-nw-newslatter-content headline d-flex align-items-center justify-content-between"
+  <footer
+          
+            id="it-nw-fooer"
+            class="it-nw-footer-section position-relative"
+            data-background="images/f-bg.jpg"
           >
-            <div class="it-nw-newslatter-text">
-              <h3>Sign up to get Latest Updates</h3>
-              <span
-                >It is an established fact that a reader will be
-                distracted.</span
-              >
-            </div>
-            <div class="it-nw-newslatter-form position-relative">
-              <form action="#">
-                <input type="text" placeholder="Email Here" />
-                <div class="it-nw-btn text-center">
-                  <button>Subscribe Now</button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="it-nw-fooer-widget-wrapper">
-        <div class="container">
-          <div class="it-nw-fooer-widget-area">
-            <div class="row">
-              <div class="col-lg-3 col-md-6">
+            <div class="it-nw-newslatter-area" style="margin-left: 12%">
+              <div class="container">
                 <div
-                  class="it-nw-fooer-widget headline pera-content ul-li-block"
+                  class="it-nw-newslatter-content headline d-flex align-items-center justify-content-between"
                 >
-                  <div class="it-nw-logo-widget">
-                    <a href="#"
-                      ><img src="images/logo.png" width="250" alt=""
-                    /></a>
-                    <p>
-                      Lorem ipsum dolor amet, consectetur adipiscing elit. Donec
-                      ut scelerisque arcu, at porttitor lacus. Integer.
-                    </p>
+                  <div class="it-nw-newslatter-text">
+                    <h3>Sign up to get Latest Updates</h3>
+                    <span
+                      >It is an established fact that a reader will be
+                      distracted.</span
+                    >
+                  </div>
+                  <div class="it-nw-newslatter-form position-relative">
+                    <form action="#">
+                      <input type="text" placeholder="Email Here" />
+                      <div class="it-nw-btn text-center">
+                        <button>Subscribe Now</button>
+                      </div>
+                    </form>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-6">
+            </div>
+            <div class="it-nw-fooer-widget-wrapper">
+              <div class="container margin-left">
+                <div class="it-nw-fooer-widget-area">
+                  <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                      <div
+                        class="it-nw-fooer-widget headline pera-content ul-li-block"
+                      >
+                        <div class="it-nw-logo-widget">
+                          <a href="#"
+                            ><img src="images/logo.png" width="250" alt=""
+                          /></a>
+                          <p>
+                            Lorem ipsum dolor amet, consectetur adipiscing elit.
+                            Donec ut scelerisque arcu, at porttitor lacus.
+                            Integer.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                      <div
+                        class="it-nw-fooer-widget headline pera-content ul-li-block"
+                      >
+                        <div class="it-nw-fooer-menu">
+                          <h3 class="widget-title">Quick link</h3>
+                          <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li>
+                              <a href="index.html#it-nw-services">Services</a>
+                            </li>
+                            <li>
+                              <a href="index.html#it-nw-about">About us</a>
+                            </li>
+                            <li>
+                              <a href="index.html#it-nw-testimonial"
+                                >Testimonials</a
+                              >
+                            </li>
+                            <li><a href="news.html">News</a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                      <div
+                        class="it-nw-fooer-widget headline pera-content ul-li-block"
+                      >
+                        <div class="it-nw-fooer-menu">
+                          <h3 class="widget-title">Services</h3>
+                          <ul>
+                            <li>
+                              <a href="data-psychology.html">Data Psychology</a>
+                            </li>
+                            <li>
+                              <a href="data-engineering.html"
+                                >Data Engineering</a
+                              >
+                            </li>
+                            <li>
+                              <a href="data-science.html">Data Science</a>
+                            </li>
+                            <li>
+                              <a href="bi-analytics.html">BI & Analytics</a>
+                            </li>
+                            <li>
+                              <a href="software-development.html"
+                                >Software Development</a
+                              >
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                      <div
+                        class="it-nw-fooer-widget headline pera-content ul-li-block"
+                      >
+                        <div class="it-nw-contact-widget">
+                          <h3 class="widget-title">Contact info</h3>
+                          <ul>
+                            <li>
+                              <i class="fas fa-phone"></i>
+                              <span> +123 (4567) 890 </span>
+                            </li>
+                            <li>
+                              <i class="fas fa-envelope"></i>
+                              <span> info@techvantagesystems.com </span>
+                            </li>
+                            <li>
+                              <i class="fas fa-map-marker-alt"></i>
+                              <span
+                                >380 St Kilda Road, Melbourne VIC 3004,
+                                Australia
+                              </span>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="it-nw-fooer-copyright margin-left">
+              <div class="container">
                 <div
-                  class="it-nw-fooer-widget headline pera-content ul-li-block"
+                  class="it-nw-copyright-wrap pera-content d-flex justify-content-between align-items-center"
                 >
-                  <div class="it-nw-fooer-menu">
-                    <h3 class="widget-title">Quick link</h3>
+                  <div class="it-nw-copyright-text">
+                    <p>© 2021 Techvantage All rights reserved</p>
+                  </div>
+                  <div class="it-nw-copyright-menu ul-li">
                     <ul>
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="#">Services</a></li>
-                      <li><a href="#">About us</a></li>
-                      <li><a href="#">Testimonials</a></li>
-                      <li><a href="#">News</a></li>
+                      <li><a href="#">Privacy Policy </a></li>
+                      <li><a href="#">Cookie Policy </a></li>
                     </ul>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-6">
-                <div
-                  class="it-nw-fooer-widget headline pera-content ul-li-block"
-                >
-                  <div class="it-nw-fooer-menu">
-                    <h3 class="widget-title">Services</h3>
-                    <ul>
-                      <li><a href="#">Data Psychology</a></li>
-                      <li><a href="#">Data Engineering</a></li>
-                      <li><a href="#">Data Science</a></li>
-                      <li><a href="#">BI & Analytics</a></li>
-                      <li><a href="#">Software Development</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-6">
-                <div
-                  class="it-nw-fooer-widget headline pera-content ul-li-block"
-                >
-                  <div class="it-nw-contact-widget">
-                    <h3 class="widget-title">Contact info</h3>
-                    <ul>
-                      <li>
-                        <i class="fas fa-phone"></i>
-                        <span> +123 (4567) 890 </span>
-                      </li>
-                      <li>
-                        <i class="fas fa-envelope"></i>
-                        <span> info@techvantagesystems.com </span>
-                      </li>
-                      <li>
-                        <i class="fas fa-map-marker-alt"></i>
-                        <span
-                          >380 St Kilda Road, Melbourne VIC 3004, Australia
-                        </span>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
             </div>
-          </div>
-        </div>
-      </div>
-      <div class="it-nw-fooer-copyright">
-        <div class="container">
-          <div
-            class="it-nw-copyright-wrap pera-content d-flex justify-content-between align-items-center"
-          >
-            <div class="it-nw-copyright-text">
-              <p>© 2021 Techvantage All rights reserved</p>
-            </div>
-            <div class="it-nw-copyright-menu ul-li">
-              <ul>
-                <li><a href="#">Privacy Policy </a></li>
-                <li><a href="#">Cookie Policy </a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+          </footer>
 
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
