--- a/index.html
+++ b/index.html
@@ -1438,10 +1438,18 @@
                           <h3 class="widget-title">Quick link</h3>
                           <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">Testimonials</a></li>
-                            <li><a href="#">News</a></li>
+                            <li>
+                              <a href="index.html#it-nw-services">Services</a>
+                            </li>
+                            <li>
+                              <a href="index.html#it-nw-about">About us</a>
+                            </li>
+                            <li>
+                              <a href="index.html#it-nw-testimonial"
+                                >Testimonials</a
+                              >
+                            </li>
+                            <li><a href="news.html">News</a></li>
                           </ul>
                         </div>
                       </div>
@@ -1453,11 +1461,25 @@
                         <div class="it-nw-fooer-menu">
                           <h3 class="widget-title">Services</h3>
                           <ul>
-                            <li><a href="#">Data Psychology</a></li>
-                            <li><a href="#">Data Engineering</a></li>
-                            <li><a href="#">Data Science</a></li>
-                            <li><a href="#">BI & Analytics</a></li>
-                            <li><a href="#">Software Development</a></li>
+                            <li>
+                              <a href="data-psychology.html">Data Psychology</a>
+                            </li>
+                            <li>
+                              <a href="data-engineering.html"
+                                >Data Engineering</a
+                              >
+                            </li>
+                            <li>
+                              <a href="data-science.html">Data Science</a>
+                            </li>
+                            <li>
+                              <a href="bi-analytics.html">BI & Analytics</a>
+                            </li>
+                            <li>
+                              <a href="software-development.html"
+                                >Software Development</a
+                              >
+                            </li>
                           </ul>
                         </div>
                       </div>
