--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
               <div class="it-nw-feature-content">
                 <div class="row justify-content-center">
                   <a
-                    href="/data-science.html"
+                    href="data-science.html"
                     class="col-lg-4 col-md-6 wow fadeInUp"
                     data-wow-delay="0ms"
                     data-wow-duration="1500ms"
