--- a/data-engineering.html
+++ b/data-engineering.html
@@ -61,10 +61,7 @@
       <input type="checkbox" class="toggler" />
       <div class="hamburger"><div></div></div>
     </div>
-    <div
-      class="sample-header"
-      style="background-image: url('/../../images/b4.jpg')"
-    >
+    <div class="sample-header" style="background-image: url('images/b4.jpg')">
       <div class="sample-header-section text-center">
         <h1 class="display-3">Data Engineering</h1>
         <div class="crumbs">
